# ai-email-agent

./: .env.example  .gitignore  CLAUDE.md  MIGRATION_SUMMARY.md  PROJECT_SETUP_SUMMARY.md  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
config/: category_rules.yaml.example  classifier_config.yaml.example  llm_config.yaml.example  vip_senders.yaml.example
docs/: CLASSIFIER_DESIGN.md  CLASSIFIER_TECHNICAL_SPEC.md  CLASSIFIER_TESTING_PLAN.md  CLASSIFIER_USER_GUIDE.md  IMPLEMENTATION_PLAN.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  SETUP_GUIDE.md  TECHNICAL_REQUIREMENTS.md  UV_QUICK_REFERENCE.md
scripts/: interactive_login.py  test_inbox_scanner.py
src/: __init__.py
src/auth/: __init__.py  config.py  exceptions.py  graph_client.py  manager.py  token_cache.py
src/classifiers/: __init__.py
src/email_client/: __init__.py  email_fetcher.py  email_scanner.py  folder_manager.py  models.py
src/operations/: __init__.py
src/summarization/: __init__.py
tests/: __init__.py
tests/unit/auth/: test_config.py  test_graph_client.py  test_manager.py  test_token_cache.py
tests/unit/email_client/: __init__.py  test_email_fetcher.py  test_email_scanner.py  test_folder_manager.py  test_models.py
